# Flux-Framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  chat.py  index.html  mkdocs.yml  my_chat.py  objects.inv  pyproject.toml  test_moondream.py  tools_test.py
.github/workflows/: docs.yml
api-reference/agents/: index.html
api-reference/events/: index.html
api-reference/middleware/: index.html
api-reference/utilities/: index.html
changelog/: index.html
contributing/architecture/: index.html
contributing/contributing/: index.html
contributing/development/: index.html
core-concepts/guardrails/: index.html
core-concepts/memory/: index.html
core-concepts/middleware/: index.html
core-concepts/protocols/: index.html
core-concepts/sessions/: index.html
deployment/github-actions/: index.html
docs/: README.md  api_reference.md  architecture.md  changelog.md  examples.md  getting_started.md  index.md  troubleshooting.md
docs/api-reference/: agents.md  events.md  memory.md  middleware.md  providers.md  sessions.md  tools.md  utilities.md
docs/contributing/: development.md  (+2 more)
examples/: 01_basic.py  02_tools.py  03_handoffs.py  04_streaming.py  05_guardrails.py  06_memory.py  07_middleware.py  08_multi_agent.py  09_custom_model.py
flux/: __init__.py  agent.py  cli.py  config.py  context.py  exceptions.py  runner.py
site/: 404.html  sitemap.xml
tests/: conftest.py  test_agent.py  test_events.py  test_guardrails.py  test_handoffs.py  test_middleware.py  test_models.py  test_runner.py  test_sessions.py  test_tools.py  test_tracing.py
(+102 files in other folders)
