[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-agents"
version = "0.1.0"
description = "A Python-first Agentic AI Framework — provider-agnostic, async-first, middleware-driven"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Flux Contributors" }]
keywords = ["ai", "agents", "llm", "ollama", "openai", "anthropic", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
openai = ["openai>=2.0.0"]
anthropic = ["anthropic>=0.40.0"]
ollama = ["aiohttp>=3.9.0"]
full = ["openai>=2.0.0", "anthropic>=0.40.0", "aiohttp>=3.9.0"]
memory = ["numpy>=1.26.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "coverage>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flux"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
